Update 1 - Copia.html

--- a/index_arquivos/FILMES/1 - Copia.html
+++ b/index_arquivos/FILMES/1 - Copia.html
@@ -55,7 +55,9 @@ https://www.youtube-nocookie.com/embed/APnbkEXT_a8?autoplay=1&mute=1&enablejsapi
 https://i.ytimg.com/vi_webp/APnbkEXT_a8/maxresdefault.webp
 " width="280" height="280"></a><BR/>
 Catástrofe no Céu - Acidente de Avião
-<BR/></button>
+<BR/><a href="
+Catástrofe no Céu
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 https://www.youtube-nocookie.com/embed/gN8zmVnF8go?autoplay=1&mute=1&enablejsapi=1
@@ -71,7 +73,9 @@ https://www.youtube-nocookie.com/embed/Cih2TMjKoE4?autoplay=1&mute=1&enablejsapi
 https://i.ytimg.com/vi/Cih2TMjKoE4/maxresdefault.jpg?v=64ef3e8c
 " width="280" height="280"></a><BR/>
 Reféns
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 https://www.youtube-nocookie.com/embed/AnXuU9oo7ko?autoplay=1&mute=1&enablejsapi=1
@@ -79,7 +83,9 @@ https://www.youtube-nocookie.com/embed/AnXuU9oo7ko?autoplay=1&mute=1&enablejsapi
 https://i.ytimg.com/vi_webp/AnXuU9oo7ko/maxresdefault.webp
 " width="280" height="280"></a><BR/>
 Outra Vida
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 https://www.youtube-nocookie.com/embed/8djl37iIpyE?autoplay=1&mute=1&enablejsapi=1
@@ -87,7 +93,9 @@ https://www.youtube-nocookie.com/embed/8djl37iIpyE?autoplay=1&mute=1&enablejsapi
 https://i.ytimg.com/vi_webp/8djl37iIpyE/maxresdefault.webp?v=64a848c6
 " width="280" height="280"></a><BR/>
 Meu Nome é Sara
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 https://www.youtube-nocookie.com/embed/GYEd9rLU3NM?autoplay=1&mute=1&enablejsapi=1
@@ -95,7 +103,9 @@ https://www.youtube-nocookie.com/embed/GYEd9rLU3NM?autoplay=1&mute=1&enablejsapi
 https://i.ytimg.com/vi/GYEd9rLU3NM/maxresdefault.jpg
 " width="280" height="280"></a><BR/>
 FILME DE TERROR
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 https://www.youtube-nocookie.com/embed/LukHemroRs8?autoplay=1&mute=1&enablejsapi=1
@@ -103,7 +113,9 @@ https://www.youtube-nocookie.com/embed/LukHemroRs8?autoplay=1&mute=1&enablejsapi
 https://i.ytimg.com/vi_webp/LukHemroRs8/maxresdefault.webp?v=64062213
 " width="280" height="280"></a><BR/>
 A Outra Face da Guerra
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 https://www.youtube-nocookie.com/embed/c9ljmOPiUOE?autoplay=1&mute=1&enablejsapi=1
@@ -111,7 +123,9 @@ https://www.youtube-nocookie.com/embed/c9ljmOPiUOE?autoplay=1&mute=1&enablejsapi
 https://i.ytimg.com/vi_webp/c9ljmOPiUOE/maxresdefault.webp
 " width="280" height="280"></a><BR/>
 O Outro Lado dos Trilhos
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 https://www.youtube-nocookie.com/embed/vp955iLgsUg?autoplay=1&mute=1&enablejsapi=1
@@ -119,7 +133,9 @@ https://www.youtube-nocookie.com/embed/vp955iLgsUg?autoplay=1&mute=1&enablejsapi
 https://i.ytimg.com/vi/vp955iLgsUg/maxresdefault.jpg?v=6230e66a
 " width="280" height="280"></a><BR/>
 Sobreviventes
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 https://www.youtube-nocookie.com/embed/vwX5voR8DUk?autoplay=1&mute=1&enablejsapi=1
@@ -127,7 +143,9 @@ https://www.youtube-nocookie.com/embed/vwX5voR8DUk?autoplay=1&mute=1&enablejsapi
 https://i.ytimg.com/vi/vwX5voR8DUk/maxresdefault.jpg
 " width="280" height="280"></a><BR/>
 Axcellerator
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 https://www.youtube-nocookie.com/embed/AmKmHrj3b4s
@@ -135,7 +153,19 @@ https://www.youtube-nocookie.com/embed/AmKmHrj3b4s
 https://i.ytimg.com/vi/AmKmHrj3b4s/maxresdefault.jpg?v=61a4a97e
 " width="280" height="280"></a><BR/>
 FIM DA VIAGEM
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
+<!---------------------------------------------------------------------------------->
+<button><a href="
+https://www.youtube-nocookie.com/embed/Y0XUccN9uTI
+?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+https://i.ytimg.com/vi/Y0XUccN9uTI/maxresdefault.jpg
+" width="280" height="280"></a><BR/>
+Forças Malignas
+<BR/><a href="
+Forças Malignas
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -143,7 +173,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -151,7 +183,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -159,7 +193,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -167,7 +203,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -175,7 +213,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -183,7 +223,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -191,7 +233,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -199,7 +243,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -207,7 +253,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -215,7 +263,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -223,7 +273,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -231,7 +283,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -239,7 +293,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -247,7 +303,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -255,7 +313,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -263,7 +323,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -271,7 +333,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -279,7 +343,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -287,7 +353,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -295,7 +363,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -303,7 +373,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -311,7 +383,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -319,7 +393,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -327,15 +403,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
-<!---------------------------------------------------------------------------------->
-<button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 
 
 
