Update 1 - Copia.html

--- a/index_arquivos/FILMES/1 - Copia.html
+++ b/index_arquivos/FILMES/1 - Copia.html
@@ -74,7 +74,7 @@ https://i.ytimg.com/vi/Cih2TMjKoE4/maxresdefault.jpg?v=64ef3e8c
 " width="280" height="280"></a><BR/>
 Reféns
 <BR/><a href="
-NOMETXT⚫
+Reféns
 .txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
@@ -84,7 +84,7 @@ https://i.ytimg.com/vi_webp/AnXuU9oo7ko/maxresdefault.webp
 " width="280" height="280"></a><BR/>
 Outra Vida
 <BR/><a href="
-NOMETXT⚫
+Outra Vida
 .txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
@@ -94,17 +94,17 @@ https://i.ytimg.com/vi_webp/8djl37iIpyE/maxresdefault.webp?v=64a848c6
 " width="280" height="280"></a><BR/>
 Meu Nome é Sara
 <BR/><a href="
-NOMETXT⚫
+Meu Nome é Sara
 .txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-https://www.youtube-nocookie.com/embed/GYEd9rLU3NM?autoplay=1&mute=1&enablejsapi=1
-" target="_blank"><img src="
-https://i.ytimg.com/vi/GYEd9rLU3NM/maxresdefault.jpg
+https://www.youtube-nocookie.com/embed/qvhX5j466v0
+?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+https://i.ytimg.com/vi/qvhX5j466v0/maxresdefault.jpg
 " width="280" height="280"></a><BR/>
-FILME DE TERROR
+A Conquista da Sibéria
 <BR/><a href="
-NOMETXT⚫
+A Conquista da Sibéria
 .txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
@@ -114,7 +114,7 @@ https://i.ytimg.com/vi_webp/LukHemroRs8/maxresdefault.webp?v=64062213
 " width="280" height="280"></a><BR/>
 A Outra Face da Guerra
 <BR/><a href="
-NOMETXT⚫
+A Outra Face da Guerra
 .txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
@@ -124,7 +124,7 @@ https://i.ytimg.com/vi_webp/c9ljmOPiUOE/maxresdefault.webp
 " width="280" height="280"></a><BR/>
 O Outro Lado dos Trilhos
 <BR/><a href="
-NOMETXT⚫
+O Outro Lado dos Trilhos
 .txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
@@ -134,7 +134,7 @@ https://i.ytimg.com/vi/vp955iLgsUg/maxresdefault.jpg?v=6230e66a
 " width="280" height="280"></a><BR/>
 Sobreviventes
 <BR/><a href="
-NOMETXT⚫
+Sobreviventes
 .txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
@@ -144,7 +144,7 @@ https://i.ytimg.com/vi/vwX5voR8DUk/maxresdefault.jpg
 " width="280" height="280"></a><BR/>
 Axcellerator
 <BR/><a href="
-NOMETXT⚫
+Axcellerator
 .txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
@@ -154,7 +154,7 @@ https://i.ytimg.com/vi/AmKmHrj3b4s/maxresdefault.jpg?v=61a4a97e
 " width="280" height="280"></a><BR/>
 FIM DA VIAGEM
 <BR/><a href="
-NOMETXT⚫
+FIM DA VIAGEM
 .txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
