Update 1 - Copia.html

--- a/index_arquivos/CANAIS/1 - Copia.html
+++ b/index_arquivos/CANAIS/1 - Copia.html
@@ -72,6 +72,14 @@ Ribeirinha da Amazônia<BR/> Fabiola Alves Pedrosa
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
+https://www.youtube.com/@Ribeirinhasdaamazonia.Shorts.
+" target="_blank"><img src="
+https://yt3.googleusercontent.com/gglWehLGhuro96eBYuJh74SfaA01CpIKEgIOJq41WoB1_36rHLun4-h-6FbNaqN_XHRi6aWStGo=s176-c-k-c0x00ffffff-no-rj
+" width="280" height="280"></a><BR/>
+AS RIBEIRINHAS DA AMAZÔNIA<BR/> CANAL 02 REPRISES!
+.<BR/></button>
+<!---------------------------------------------------------------------------------->
+<button><a href="
 https://www.youtube.com/@robertorsfilmes" target="_blank"><img src="
 https://yt3.googleusercontent.com/ytc/APkrFKZMv0lTWEHiZUljJ3SqKGoSwRuJz3yPZ_TdrSrfN9A=s176-c-k-c0x00ffffff-no-rj
 " width="280" height="280"></a><BR/>
@@ -159,27 +167,27 @@ MUNDO COMPARTILHADO
 .<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
+https://www.youtube.com/@andreaoliveiracapixaba
 " target="_blank"><img src="
-IMAGEM⚫
+https://yt3.googleusercontent.com/h4ggECp7dUmrWn4DB6ROfBloVSboVwDsZ0NX1RlzOGr1U1cVCqr0nkWhsye9zcP5ZsnnMvtnU70=s176-c-k-c0x00ffffff-no-rj
 " width="280" height="280"></a><BR/>
-NOME⚫
+Andréa Oliveira
 .<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
+https://www.youtube.com/@TiagoDionisio
 " target="_blank"><img src="
-IMAGEM⚫
+https://yt3.googleusercontent.com/LF2LIUXOp0tEHJTVMhs2PGXCsHRU_tngZtraXgK-T9fv2dwiDetrt0I7EDbPjczH3lhjAjxFwQ=s176-c-k-c0x00ffffff-no-rj
 " width="280" height="280"></a><BR/>
-NOME⚫
+Tiago Dionisio
 .<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
+https://www.youtube.com/@MonicaChaves
 " target="_blank"><img src="
-IMAGEM⚫
+https://yt3.googleusercontent.com/ytc/APkrFKYJ_P5dLONqFTDf-IoR289him-ewpXLWUTEWcxvOg=s176-c-k-c0x00ffffff-no-rj
 " width="280" height="280"></a><BR/>
-NOME⚫
+Mônica Chaves
 .<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
