Update 1 - Copia.html

--- a/index_arquivos/FILMES/1 - Copia.html
+++ b/index_arquivos/FILMES/1 - Copia.html
@@ -168,13 +168,13 @@ Forças Malignas
 .txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
+https://www.youtube-nocookie.com/embed/wcgkmoBvY5Y
 ?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
+https://i.ytimg.com/vi/wcgkmoBvY5Y/hqdefault.jpg
 " width="280" height="280"></a><BR/>
-NOME⚫
+Filme de terror pesado
 <BR/><a href="
-NOMETXT⚫
+Filme de terror pesado
 .txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
