Update 1 - Copia.html

--- a/index_arquivos/VÍDEOS ALEATÓRIOS/1 - Copia.html
+++ b/index_arquivos/VÍDEOS ALEATÓRIOS/1 - Copia.html
@@ -97,37 +97,39 @@ https://i.ytimg.com/vi/zbmZBnPvMyg/maxresdefault.jpg
 Ilhéus - Bahia, distrito do rio do Engenho possui a <BR/>5° Igreja mais antiga do Brasil ( HISTÓRICO)
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
+Incrível processo de produção em massa de panela de barro. fábrica de cerâmica coreana
+.html" target="_blank"><img src="
+https://i.ytimg.com/vi_webp/f15Jp8dq6-I/maxresdefault.webp
+" width="280" height="280"></a><BR/>
+Incrível processo de produção em massa de panela de barro. <BR/>fábrica de cerâmica coreana
+<BR/></button>
+<!---------------------------------------------------------------------------------->
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
-<!---------------------------------------------------------------------------------->
-<button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+
+
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
