--- a/index_arquivos/VÍDEOS ALEATÓRIOS/1.html
+++ b/index_arquivos/VÍDEOS ALEATÓRIOS/1.html
@@ -49,289 +49,289 @@ img {
 <div height="100" style="background-color: #00FF00;line-height: 100px;text-align: center;"><p style="color: white"><FONT SIZE=+4>INÍCIO</FONT></p></div></a>
 <!----------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
-<button><a href="
+<button><a href="../index_arquivos/DOWNLOADS/
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+.html" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
